--- a/react-pro-01/src/MichiList/MichiList.css
+++ b/react-pro-01/src/MichiList/MichiList.css
@@ -4,6 +4,6 @@
     justify-content: center;
     align-items: center;
     margin: 0;
-    padding: 0 0 56px 0;
+    padding: 0 0 0 0;
     list-style: none;
 }
